# physics-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  notes.txt
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  physics-engine
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  physics-engine
include/: Camera.hpp  Mesh.hpp  MeshManager.hpp  Object.hpp  PhysicsEngine.hpp  RenderWindow.hpp  Scene.hpp  Shader.hpp  ShaderManager.hpp  Texture.hpp  TextureManager.hpp  Transform.hpp  Vector3D.hpp  glad.h
res/meshes/: cube.txt
res/shaders/: dirtblock.fsh  dirtblock.vsh  faceNormal.fsh  normal.fsh  platform.fsh  platform.vsh  sphere.fsh  sphere.vsh
src/: Camera.cpp  Camera.hpp  ImGuiWindow.cpp  ImGuiWindow.hpp  Mesh.cpp  Mesh.hpp  MeshManager.cpp  MeshManager.hpp  Object.cpp  Object.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  RenderWindow.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp  Timer.cpp  Timer.hpp  Transform.cpp  Transform.hpp  Vector3D.cpp  glad.c
